--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "packageManager": "pnpm@9.15.4",
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
-    "turbo": "^2.7.3"
+    "turbo": "^2.7.3",
+    "wrangler": "^4.54.0"
   }
 }
